<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="incubasys.needcharge.authentication.vm.ChangePasswordViewModel" />

        <variable
            name="callback"
            type="incubasys.needcharge.authentication.callback.ChangePasswordViewCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/dialog_fragment_bg">


        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/close_icon"
            android:onClick="@{() -> callback.onCloseButtonClicked()}"
            android:padding="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_bold" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_ui_regular"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivClose" />

        <TextView
            android:id="@+id/tvSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/sf_ui_regular"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/welcome_back_let_s_create_your_new_password"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />


        <EditText
            android:id="@+id/etNewPassword"
            errorMessage="@{vm.password.error}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/ic_password_icon"
            android:drawableEnd="@drawable/ic_preview"
            android:drawablePadding="9dp"
            android:fontFamily="@font/sf_ui_light"
            android:hint="@string/your_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="15dp"
            android:text="@={vm.password.value}"
            android:textColor="@color/text_color_normal"
            android:textColorHint="@color/text_color_hint"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubText"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/etConfirmPassword"
            errorMessage="@{vm.password.error}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/ic_password_icon"
            android:drawableEnd="@drawable/ic_preview"
            android:drawablePadding="9dp"
            android:fontFamily="@font/sf_ui_light"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="15dp"
            android:text="@={vm.confimPassword.value}"
            android:textColor="@color/text_color_normal"
            android:textColorHint="@color/text_color_hint"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword"
            tools:ignore="TextFields" />


        <Button
            android:id="@+id/bNext"
            style="@style/SimpleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:enabled="@{vm.form.valid}"
            android:fontFamily="@font/sf_ui_light"
            android:onClick="@{() -> callback.onChangePasswordButtonClicked()}"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>